[gd_scene load_steps=5 format=3 uid="uid://brxs7ghae3fvq"]

[ext_resource type="Script" path="res://src/ui/menu/menu.gd" id="1_t3okv"]

[sub_resource type="LabelSettings" id="LabelSettings_bkjet"]
font_size = 26
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0ckuc"]
font_size = 20
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2oihe"]
font_color = Color(1, 0.0705882, 0, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_t3okv")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Game Title Goes Here"
label_settings = SubResource("LabelSettings_bkjet")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Leaderboard" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/Leaderboard"]
layout_mode = 2
text = "Leaderboard"
label_settings = SubResource("LabelSettings_0ckuc")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Your name:"

[node name="NameTextEdit" type="TextEdit" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Type your name "
metadata/_edit_use_anchors_ = true

[node name="ErrorLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Please type your name before starting the game"
label_settings = SubResource("LabelSettings_2oihe")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Audio" type="Node" parent="."]
